# cashmoney-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: currency.rs  error.rs  fractional_money.rs  lib.rs  macros.rs  money.rs  util.rs
tests/: integration.rs
